--- a/build.gradle
+++ b/build.gradle
@@ -1,31 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.71'
-    ext.app_compat = '1.0.2'
-    ext.constraintLayout = '1.1.3'
-    ext.android_x = '1.0.0'
-    ext.material_design = '1.1.0-alpha01'
-    ext.picasso = '2.71828'
-    ext.okhttp = '3.11.0'
-    ext.retrofit = '2.4.0'
-    ext.rxJava = '2.2.0'
-    ext.rxAndroid = '2.1.0'
-    ext.android_liftcycle = '2.0.0-rc01'
-    ext.gson = '2.8.5'
-    ext.testRunner = '1.1.0'
-    ext.assertion = '1.1.1'
-    ext.powerMock = '1.7.3'
-    ext.mockito_kotlin = '1.5.0'
-    ext.kluent = '1.40'
-    ext.roomVersion = '1.1.1'
+    apply from: './gradle/externals.gradle'
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
