--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ android {
     androidExtensions {
         experimental = true
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 dependencies {
