--- a/gradle/externals.gradle
+++ b/gradle/externals.gradle
@@ -1,5 +1,5 @@
 ext{
-    kotlin_version = '1.4.32'
+    kotlin_version = '1.6.21'
     app_compat = '1.2.0'
     constraintLayout = '2.0.4'
     android_x = '1.2.0'
@@ -20,11 +20,11 @@ ext{
     viewmodel_ext = '2.3.1'
     android_x_java = '2.3.1'
     android_core_ktx = '1.3.2'
-    hilt_version = '2.35.1'
+    hilt_version = '2.40.3'
     fragment_ktx = '1.3.3'
     live_data = '2.3.1'
     view_model_test = '2.1.0'
     mockk = '1.11.0'
-    kotlin_coroutine = '1.5.0-RC'
+    kotlin_coroutine = '1.6.4'
     kotlin_coroutine_test = '1.4.3'
 }
